# face_recogniser_open_cv

./: .gitignore  Doxyfile  README.md
client/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  client.cpp  client.h  main.cpp
serveur/: CMakeLists.txt  ExternValue.cpp  ExternValue.h  main.cpp  main2.cpp  server.cpp  server.h
